Leave slide reveal to JS, stops flicker when loading

--- a/assets/css/slideshow.css
+++ b/assets/css/slideshow.css
@@ -132,11 +132,6 @@
 		margin-left: 10px;
 	}
 
-	.advanced #slideshow .slide
-	{
-		display: block;
-	}
-
 	.advanced #slideshow ul
 	{
 		display: inline-block;
